Uploaded image for project: 'Apache HAWQ (Retired)'
  1. Apache HAWQ (Retired)
  2. HAWQ-1782

Failed to Read from EXTERNaL TALBE of GPFDIST

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 2.4.0.0
    • backlog
    • External Tables
    • None

    Description

      TestErrorTable.TestErrorTableAll failed with

      lib/sql_util.cpp:182: Failure
      Expected equality of these values:
        0
        conn->getLastStatus()
          Which is: 1
      CREATE EXTERNAL WEB TABLE gpfdist_status (x text) execute E'( python /usr/local/hawq//bin/lib/gppinggpfdist.py localhost:7070 2>&1 || echo) ' on SEGMENT 0 FORMAT 'text' (delimiter '|'); ERROR:  the ON segment syntax for writable external tables is deprecated
      

      Attachments

        Issue Links

          Activity

            People

              huor Ruilong Huo
              chiyang10000 Wan Chiyang
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Slack

                  Issue deployment